<resources>
    <string name="app_name">iTrack Easy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_user_registration">Sign Up</string>
    <string name="user_icon">user icon</string>
    <string name="remember_password">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget your Password?</string>
    <string name="email_input_hint">Your email address</string>
    <string name="password_input_hint">Password</string>
    <string name="password_confirm_input_hint">confirm your password</string>
    <string name="registration">sign up</string>
    <string name="title_activity_bind">BindActivity</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="title_activity_track_redit">iTrackEditActivity</string>
    <string name="cancel">Cancel</string>
    <string name="click_to_add">Click to add new item</string>
    <string name="title_activity_main_track_rlist">MainiTrackListActivity</string>
    <string name="change_image">Change photo</string>
    <string name="title_activity_photo_edit">PhotoEditActivity</string>
    <string name="title_activity_track_r">iTrackActivity</string>
    <string name="title_activity_forget_password">Forget your Password?</string>
    <string name="send">Send</string>
    <string name="ble_not_support">ble not support.</string>
    <string-array name="default_type_names">
        <item>Key</item>
        <item>Wallet</item>
        <item>Purse</item>
        <item>Computer</item>
        <item>Pet</item>
        <item>Car</item>
        <item>Kid</item>
        <item>Other</item>
    </string-array>
    <string name="Key">Key</string>
    <string name="Wallet">Wallet</string>
    <string name="Purse">Purse</string>
    <string name="Computer">Computer</string>
    <string name="Pet">Pet</string>
    <string name="Car">Car</string>
    <string name="Kid">Kid</string>
    <string name="Other">Other</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="track_r_is_running">iTrack is running.</string>
    <string name="title_activity_disconnect_alert">DisconnectAlertActivity</string>
    <string name="title_activity_track_rsetting">iTrackSettingActivity</string>
    <string name="binding_steps_describe">1.Make sure to turn on your phone’s Bluetooth.\n\n2.Hold the iTrack tag close to your phone.\n\n3.Hold the button on the iTrack device until you hear a beep and the LED starts flashing.</string>
    <string name="add_track_r">Add New Item</string>
    <string name="connecting_with_track_r">Connecting with iTrack</string>
    <string name="connecting_failed">Failed to Connect</string>
    <string name="try_again_steps">Tips:\n1.Make sure you turn on the Bluetooth on your phone.\n\n2.Make sure the iTrack device is near your phone (less than 4 inches).\n\n3.Make sure to hold the button on the iTrack device until you hear the beep.\n\n4.Tap “Re-scan” to try again.</string>
    <string name="try_again">Re-scan</string>
    <string name="send_password_to_my_email">Send Password to My Email</string>
    <string name="or_use">Or Use</string>
    <string name="my_track_list">My Items</string>
    <string name="crop_image">Crop Image</string>
    <string name="ok">OK</string>
    <string name="my_track_r">My Items</string>
    <string name="add_new_item">Add New Item</string>
    <string name="prepare_track_r_to_bind">Please have your iTrack device ready to begin pairing</string>
    <string name="sleep_on_and_time">Sleep Mode On\n\n22:00 - 7:00</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="distance_to_track_r">Distance to iTrack</string>
    <string name="loc">Map</string>
    <string name="ring">Ring</string>
    <string name="photo">Photo</string>
    <string name="share">Share</string>
    <string name="change">Change photo</string>
    <string name="key">Key</string>
    <string name="itrak_alart">iTrack Alert</string>
    <string name="phone_alart">Phone Alert</string>
    <string name="alert_level">Alert level</string>
    <string name="phone_alart_tip">When this option is turned on, your phone will beep when your iTrack is disconnected from the phone.</string>
    <string name="alert_level_tip">When this option is turned on, your iTrack will beep when it is disconnected from the phone.</string>
    <string name="turn_off_track_r">Turn off iTrack</string>
    <string name="unbind_track_r">Delete iTrack</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="reconect_to_s">"Reconnect to %s"</string>
    <string name="binding_success">Bind Success!</string>
    <string name="already_binded">Already Binded!</string>
    <string name="your_device_no_ble_support">Your device has no bluetooth support.</string>
    <string name="max_device_limit_reached">Max device count limit reach</string>
    <string name="custom_name">Custom Name</string>
    <string name="user_title">Myself</string>
    <string name="user_data">About me</string>
    <string name="user_app_ring">APP Alram Bell</string>
    <string name="user_timering">Alarm Time</string>
    <string name="user_airsafe">Safe Wifi Area</string>
    <string name="user_language">Language</string>
    <string name="user_background">Background</string>
    <string name="user_tip">Feedback</string>
    <string name="user_version">Check for updates: \n(current version : 1.0)</string>
    <string name="userhardware_version">Hardware Version : 1.0</string>
    <string name="user_exitcount">Log out</string>
    <string name="user_editor">Edit</string>
    <string name="user_usericon">Portrait</string>
    <string name="user_smallname">Nickname:</string>
    <string name="user_borddate">Birthday:</string>
    <string name="user_xingzuo">Sign:</string>
    <string name="user_xuexing">Blood type:</string>
    <string name="user_liks">Hobby:</string>
    <string name="user_editorself">Signature:</string>
    <string name="user_homepage">Homepage:</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="safezone_title">Wifi Safe Zone</string>
    <string name="safezone_message">When you connect to these trusted wifi networks, distance alerts are disabled in the iTrack device and your phone to avoid constant alerts.</string>
    <string name="safezone_home">Home</string>
    <string name="safezone_office">Office</string>
    <string name="safezone_other">Other</string>
    <string name="safezone_modifywifi">Set, click to change</string>
    <string name="safezone_addwifi">Click to add wifi</string>
    <string name="safezone_wifiselcettitle">Choose Safe Wifi</string>
    <string name="safezone_wifitip">When you connect to these trusted wifi networks, distance alerts are disabled in the iTrack device and your phone to avoid constant alerts.</string>
    <string name="wifisameple">WIFI</string>
    <string name="gps_disable_hint">Location is disabled , iTrack can\'t save the location info</string>
    <string name="connecting">Connecting</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="closed">Off</string>
    <string name="invalid_email_address">Invalid Email Address!</string>
    <string name="password_length_is_6_to_18_chars">Password length requires 6 to 18 characters.</string>
    <string name="signing_in">Signing In</string>
    <string name="login_success">Login Success</string>
    <string name="invalid_email_or_password">Invalid Email or Password!</string>
    <string name="network_error">Network Error</string>
    <string name="network_status_error">Login Error</string>
    <string name="unknow_error">Unkown Error</string>
    <string name="warning">Warning</string>
    <string name="name_connected">%s\n disconnected</string>
    <string name="i_known">I know</string>
    <string name="find">Find</string>
    <string name="sending_mail_which_contains_your_password">Sending mail which contains your password.</string>
    <string name="password_has_been_sent_to_your_email">" Password has been sent to Your Email"</string>
    <string name="the_two_passwords_do_not_match">"The two passwords do not match. "</string>
    <string name="registration_success">Registration Success,Please check your email to activate your account </string>
    <string name="email_has_been_used">Email has been used.</string>
    <string name="registration_error">Registration Error</string>
    <string name="title_activity_findme">FindmeActivity</string>
    <string name="i_am_here">I am here</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="start">From</string>
    <string name="end">To</string>
    <string name="everyday">Everyday</string>
    <string name="help">Help</string>
    <string name="track_r_settings">iTrack Setting</string>
    <string name="i_am_here_find_me">I am here, find me?</string>
    <string name="my_location_title">Manually Added Location</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_tip1">We highly appreciate your feedback and suggestions.</string>
    <string name="feedback_tip2"> Every word  will be helpful for us to improve this software.</string>
    <string name="feedback_hinttip">Please input your feedback（Up to 500 words）</string>
    <string name="setting">setting</string>
    <string name="feedbackpush">Submit</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="warm_prompt_open_location_service">In order to record the iTrack\'s lost location info, you need open the location service.</string>
    <string name="warm_prompt">Hint</string>
    <string name="enable_network_before_login">Enable network before login.</string>
    <string name="firststart">Start My iTrack</string>
    <string name="reset">Reset</string>
    <string name="locationsetting">Location name：</string>
    <string name="locationtime">time：</string>
    <string name="usereditor_select">"</string>
    <string name="usereditor_select_bloodtp_o">O</string>
    <string name="usereditor_select_bloodtp_A">A</string>
    <string name="usereditor_select_bloodtp_B">B</string>
    <string name="usereditor_select_bloodtp_AB">AB</string>
    <string name="alarttime_tip">AlartTime:</string>
    <string name="alarttime_second">S</string>
    <string name="alarttime_title">AlartTime Setting</string>
    <string name="title_activity_amap">AmapActivity</string>
    <string name="place_lost">Place Lost</string>
    <string name="unbind_successfully">Delete Success.</string>
    <string name="unbind_track_server_error">Server Error, Can not delete this iTrack.</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>
    <string name="no_location_data">No Location Data! </string>
    <string name="title_activity_start_and_end_timer_picker">StartAndEndTimerPickerActivity</string>
    <string name="sleep_mode_time_setting">"Time Setting"</string>
    <string name="end_time_should_smaller_than_start_time">Ending time should be smaller than starting time.</string>
    <string name="title_activity_camera">Camera</string>
    <string name="sleep_mode_on_and_time_format">Sleep Mode On\n\n%1$s - %2$s</string>
    <string name="sleep_mode_off">Sleep Mode off</string>
    <string name="feed_back_success">Thanks,your feedback is submitted!</string>
    <string name="feedback_failed">Sorry,your feedback failed to submit, please check your internet!</string>
    <string name="empty_feedback_can_not_be_submitted">Empty Feedback can not be submitted</string>
    <string name="wait_a_moment">Wait for a moment.</string>
    <string name="checking_for_new_version">Checking for new version</string>
    <string name="title_name">Registration</string>
</resources>