<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.antilost.app.activity.LoginActivity">


    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/app_name"
        android:textColor="@color/user_data_text"
        android:textSize="@dimen/app_logo_text_size" />

    <LinearLayout
        android:id="@+id/emaiiInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/user_email_margin_top"
        android:background="@drawable/input_bkg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/inputEmailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/user_icon"
            android:src="@drawable/user_icon" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/send_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/remember_password_height"
        android:layout_below="@id/emaiiInputLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/send_password_to_my_email"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_password_hint"
        android:layout_centerHorizontal="true"
        android:background="@drawable/purple_btn_bkg"
        android:text="@string/send"
        android:textColor="@android:color/white" />



</RelativeLayout>