<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.antilost.app.activity.LoginActivity" >

    <Button
        android:id="@+id/userRegistrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:text="@string/new_user_registration"
        android:textColor="@color/user_data_text" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userRegistrationBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/title_name"
        android:textColor="@color/register_text"
        android:textSize="@dimen/app_logo_text_size" />

    <LinearLayout
        android:id="@+id/emaiiInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameText"
        android:layout_marginTop="@dimen/user_email_margin_top"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:background="@drawable/input_bkg" >

        <ImageView android:id="@+id/inputEmailIcon"
            android:src="@drawable/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/user_icon"/>
        
        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:hint="@string/email_input_hint"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emaiiInputLayout"
        android:layout_marginTop="@dimen/password_input_margin_top"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:background="@drawable/input_bkg" >

        <ImageView android:id="@+id/inputPasswordIcon"
            android:src="@drawable/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/user_icon"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:hint="@string/password_input_hint"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/remember_password_height"
        android:gravity="center"
        android:layout_below="@id/passwordInputLayout"
        android:text="@string/remember_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/user_data_text"
        android:drawableLeft="@drawable/check_icon"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/signInBtn"
        android:layout_below="@id/rememberPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/purple_btn_bkg"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_below="@id/signInBtn"
        android:text="@string/forget_password"
        android:layout_marginTop="20dp"
        android:textColor="@color/user_data_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/thirdPartyLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_data_text"
            android:text="@string/or_use"/>

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_below="@id/thirdPartyLogin"
            android:src="@drawable/facebook"

            />


        <ImageView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/thirdPartyLogin"
            android:layout_marginRight="50dp"
            android:src="@drawable/twitter"

            />
    </RelativeLayout>
</RelativeLayout>