<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addModelcontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_bgd"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!-- 标题栏 -->
    <RelativeLayout
        android:id="@+id/rluser_topback"
        android:layout_width="fill_parent"
        android:layout_height="60dp">

        <include layout="@layout/csst_title_layout_trigle" />
    </RelativeLayout>
    <!-- 分隔符 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_tip1"
        android:layout_marginTop="10dp"
        android:textColor="@color/user_data_text"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_tip2"
        android:layout_marginTop="10dp"
        android:textColor="@color/user_data_text"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:hint="@string/feedback_hinttip"
        android:padding="20dp"
        android:gravity="top"
        android:id="@+id/etfeedback"
        android:textSize="@dimen/activity_horizontal_margin"
        android:background="#ffffffff"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/mbtnpush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/submit_button_backgournd"
        android:text="@string/feedbackpush"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_title_size" />


</LinearLayout>
